added send mail api and add notes
